--- a/public/Frontend/assets/css/A.style.css.pagespeed.cf.LmhYJqu-1k.css
+++ b/public/Frontend/assets/css/A.style.css.pagespeed.cf.LmhYJqu-1k.css
@@ -679,16 +679,16 @@ input:focus::-moz-placeholder {
     }
 }
 
-.footer-padding {
+/* .footer-padding {
     padding-top: 150px;
     padding-bottom: 120px
-}
+} */
 
 @media only screen and (min-width:1200px) and (max-width:1600px) {
-    .footer-padding {
+    /* .footer-padding {
         padding-top: 150px;
         padding-bottom: 120px
-    }
+    } */
 }
 
 @media only screen and (min-width:992px) and (max-width:1199px) {
